# ffinterp

./: Cargo.toml  README.md
benches/: interpolation_bench.rs
bindings/julia/FFInterp/: Manifest.toml  Project.toml
bindings/julia/FFInterp/src/: FFInterp.jl
examples/: calling_from_julia.jl  one_d_irregular_data_interpolation.rs  one_d_sine_wave_interpolation.rs
examples/plotter/: mod.rs
src/: dataset.rs  lib.rs
src/bindings/: julia.rs
src/interpolation/: mod.rs  one_d.rs
